# GuardianEye-Real-Time-AI-Threat-Intelligence-System

./: .env.example  .gitignore  Dockerfile  README.md  START_HERE.md  TESTING_AND_DEPLOYMENT.md  agent.py  guardianeye-dashboard.html  package-lock.json  requirements.txt
Vision-Agents/: CLAUDE.md  main.py  pyproject.toml
Vision-Agents/agents-core/: pyproject.toml
Vision-Agents/examples/03_phone_and_rag_example/: inbound_phone_and_rag_example.py
Vision-Agents/examples/08_agent_server_example/: README.md
Vision-Agents/plugins/aws/example/: aws_realtime_function_calling_example.py
Vision-Agents/plugins/cartesia/example/: main.py  narrator-example.py
Vision-Agents/plugins/decart/example/: decart_example.py
Vision-Agents/plugins/deepgram/example/: deepgram_tts_example.py
Vision-Agents/plugins/fast_whisper/example/: fast_whisper_example.py
Vision-Agents/plugins/fish/example/: fish_example.py
Vision-Agents/plugins/gemini/example/: gemini_vlm_agent_example.py
Vision-Agents/plugins/getstream/tests/: test_stream_edge_transport.py
Vision-Agents/plugins/heygen/example/: avatar_example.py  avatar_realtime_example.py
Vision-Agents/plugins/inworld/example/: inworld_tts_example.py
Vision-Agents/plugins/kokoro/example/: kokoro_example.py
Vision-Agents/plugins/mistral/: README.md
Vision-Agents/plugins/mistral/example/: mistral_stt_example.py
Vision-Agents/plugins/moondream/: README.md
Vision-Agents/tests/: test_agent_tracks.py  test_events.py
Vision-Agents/tests/test_agents/: test_agent_launcher.py  test_agents.py  test_runner.py
docs/: DEMO_SCRIPT.md
(+24 files in other folders)
