[project]
name = "guardianeye" 
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.13.0.92",
    "python-dotenv>=1.2.1",
    "vision-agents-plugins-ultralytics>=0.3.8",
    "vision-agents[anthropic,deepgram,elevenlabs,gemini,getstream,moondream,ultralytics]>=0.3.8",
]
